--- a/styles.css
+++ b/styles.css
@@ -43,15 +43,16 @@ body {
   margin-top: 0.5em;
   font-size: 1em;
   font-weight: 600;
-  color: rgb(232, 240, 235);
+  color: rgb(8, 40, 74);
   cursor: pointer;
 }
 
 .signupbtn:hover {
-  color: #88e9d7;
+  color: rgb(16, 110, 150);
 }
 
 .registration-prompt {
+  color: rgba(74, 75, 75, 1);
   margin-top: 30px;
 }
 
@@ -318,6 +319,76 @@ body {
   position: relative;
 }
 
+input[type='text'],
+input[type='password'],
+input[type='email'] {
+  margin-top: 20px;
+  margin-bottom: 5px;
+  border-radius: 50px;
+  height: 50px;
+  border: 2px solid rgb(228, 226, 226);
+  background-color: #f2ecec;
+  color: rgb(54, 62, 62);
+  width: 70%;
+  font-size: 1.1em;
+  font-weight: 600;
+  text-align: center;
+  min-width: 50%;
+  max-width: 60%;
+  height: 55px;
+  font-family: var(--font-family);
+}
+
+input[type='text']:focus,
+input[type='password']:focus,
+input[type='email']:focus {
+  outline: none;
+  border: 4px solid rgba(21, 184, 108, 0.6);
+}
+
+input[type='text']:hover,
+input[type='password']:hover,
+input[type='email']:hover {
+  background-color: #e4e6eb;
+}
+
+input[type='submit'] {
+  border-radius: 20px;
+  background-color: var(--btncolor);
+  color: var(--lighttext);
+  height: 50px;
+  border: none;
+  width: 400px;
+  margin-top: 40px;
+  max-width: 200px;
+  box-shadow: 0 4px 3px rgba(25, 14, 94, 0.2);
+  cursor: pointer;
+}
+
+input[type='checkbox'] {
+  appearance: none;
+  -webkit-appearance: none;
+  background-color: #fafafa;
+  border: 1px solid #cacece;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 9px;
+  border-radius: 3px;
+  position: relative;
+}
+
+input[type='checkbox']:checked {
+  background-color: green;
+}
+
+input::placeholder {
+  font-weight: 400;
+  color: rgba(124, 125, 125, 0.488);
+}
+
+input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
 .new-list-form {
   display: flex;
   flex-direction: column;
@@ -361,23 +432,26 @@ body {
 
 .new-todo-input {
   margin-top: 1em;
-  background-color: rgb(216, 221, 227) !important;
+  background-color: rgb(241, 244, 247) !important;
   border: 5px solid rgb(255, 255, 255) !important;
-  box-shadow: 0px 7px 30px rgba(32, 88, 148, 0.187);
+  box-shadow: 0px 7px 30px rgba(32, 88, 148, 0.132);
   margin-bottom: 10px;
   height: 65px !important;
   color: rgb(49, 92, 165) !important;
   font-weight: 700 !important;
+  transition: ease-out 0.3s;
 }
 
 .new-todo-input:hover {
   border: 5px solid rgba(40, 107, 189, 0.413) !important;
+  transition: ease-in 0.3s;
 }
 
 .new-todo-input:focus {
   background-color: rgb(44, 82, 123) !important;
   border: 5px solid rgb(68, 113, 167) !important;
   color: white !important;
+  transition: ease-out 0.3s;
 }
 
 .new-todo-input:focus + i {
@@ -496,76 +570,6 @@ body {
   margin-top: 0.5em;
   font-weight: 500;
   color: #333946;
-}
-
-input[type='text'],
-input[type='password'],
-input[type='email'] {
-  margin-top: 20px;
-  margin-bottom: 5px;
-  border-radius: 50px;
-  height: 50px;
-  border: 2px solid rgb(228, 226, 226);
-  background-color: #f2ecec;
-  color: rgb(54, 62, 62);
-  width: 70%;
-  font-size: 1.1em;
-  font-weight: 600;
-  text-align: center;
-  min-width: 50%;
-  max-width: 60%;
-  height: 55px;
-  font-family: var(--font-family);
-}
-
-input[type='text']:focus,
-input[type='password']:focus,
-input[type='email']:focus {
-  outline: none;
-  border: 4px solid rgba(21, 184, 108, 0.6);
-}
-
-input[type='text']:hover,
-input[type='password']:hover,
-input[type='email']:hover {
-  background-color: #e4e6eb;
-}
-
-input[type='submit'] {
-  border-radius: 20px;
-  background-color: var(--btncolor);
-  color: var(--lighttext);
-  height: 50px;
-  border: none;
-  width: 400px;
-  margin-top: 40px;
-  max-width: 200px;
-  box-shadow: 0 4px 3px rgba(25, 14, 94, 0.2);
-  cursor: pointer;
-}
-
-input[type='checkbox'] {
-  appearance: none;
-  -webkit-appearance: none;
-  background-color: #fafafa;
-  border: 1px solid #cacece;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
-  padding: 9px;
-  border-radius: 3px;
-  position: relative;
-}
-
-input[type='checkbox']:checked {
-  background-color: green;
-}
-
-input::placeholder {
-  font-weight: 400;
-  color: rgba(124, 125, 125, 0.488);
-}
-
-input:focus::-webkit-input-placeholder {
-  color: transparent;
 }
 
 .error {
@@ -785,6 +789,7 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
 .btn-settings {
   color: rgb(170, 172, 170);
   cursor: pointer;
+  margin-right: 20px;
 }
 
 .btn-settings:hover {
@@ -803,20 +808,19 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
   font-family: var(--font-family);
   margin: 20px 5px 20px 5px;
   padding: 11px 20px 11px 20px;
-  border: none;
-  border-radius: 50px;
   color: rgb(97, 97, 97);
   cursor: pointer;
-  border: 1px solid rgb(222, 221, 221);
+  border: 2.5px solid rgb(232, 230, 230);
+  border-radius: 50px;
 }
 
 .filter:hover {
-  border: 1.5px solid rgb(16, 81, 160);
+  border: 2.5px solid rgb(16, 81, 160);
 }
 
 .filter-selected {
   background-color: rgb(16, 110, 150);
-  border: rgb(38, 143, 150);
+  border: 2.5px solid rgb(38, 143, 150);
   font-weight: 700;
   color: rgb(255, 255, 255);
 }
@@ -833,7 +837,7 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
 .round-icon-container {
   position: absolute;
   bottom: 255px;
-  background-color: #0eb06a;
+  background-color: rgb(40, 107, 189);
   width: 100px;
   height: 100px;
   border-radius: 50%;
