--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@
 }
 
 :root {
-  --headingbg: rgb(8, 40, 74);
+  --headingbg: rgb(6, 28, 52);
   --menubg: #ffffff;
-  --bodybg: #f4f4f7;
+  --bodybg: #e0e4eb;
   --sectionbg: #ffffff;
   --lighttext: #f9f9f9;
   --darktext: rgb(152, 158, 156);
@@ -18,7 +18,7 @@
   --lightbg: #f4f8fe;
   --btncolor: rgb(16, 81, 160);
   --btnhovercolor: #178e76;
-  --list-item-container-color: #fefefe;
+  --list-item-container-color: #eef1f4;
   --list-item-container-hover-color: #3b8079;
   --addbtnncolor: #0b9b75;
   --ui-buttons-signup: #50808e;
@@ -51,9 +51,14 @@ body {
   color: rgb(16, 110, 150);
 }
 
-.registration-prompt {
+.registration-prompt,
+.login-prompt {
   color: rgba(74, 75, 75, 1);
   margin-top: 30px;
+}
+
+.term-agreement {
+  color: rgb(54, 62, 62);
 }
 
 .lists {
@@ -73,7 +78,7 @@ body {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 6px;
   box-shadow: 0px 2px 4px rgb(25 14 94 / 10%);
   border: 1px solid rgba(106, 181, 127, 0.2);
   font-family: var(--font-family);
@@ -86,17 +91,18 @@ body {
 
 .list-item-container.selected {
   background-color: rgb(16, 81, 160);
+  transition: all 0.4s ease-out;
 }
 
-.list-item-container.selected li {
+.list-item-container.selected .list-item {
   color: rgb(240, 240, 240);
 }
 
-.list-item-container.selected:hover li {
+.list-item-container.selected:hover .list-item {
   color: rgb(240, 240, 240);
 }
 
-.list-item-container:hover li {
+.list-item-container:hover .list-item {
   color: rgb(16, 81, 160);
 }
 
@@ -106,6 +112,10 @@ body {
   font-family: var(--font-family);
   font-weight: 600;
   color: var(--darktext);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 1rem;
 }
 
 .body-wrapper {
@@ -115,8 +125,8 @@ body {
   grid-template-rows: 100px auto;
   gap: 0px 0px;
   grid-template-areas:
-    'head head head head head head head head head head toprightnav toprightnav'
-    'menu menu section section section section section section section section section section';
+    'head head head head head head head head head head head head'
+    'section section section section section section section section section section section section';
 }
 
 .heading {
@@ -129,6 +139,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 1000;
+  height: 12vh;
 }
 
 .logout-btn-container {
@@ -147,7 +158,7 @@ body {
 
 .logout-btn-container:hover {
   color: var(--btnhovercolor);
-  border: 1px solid var(--btnhovercolor);
+  border: 2px solid var(--btnhovercolor);
 }
 
 .logout-btn {
@@ -186,6 +197,8 @@ body {
   background-color: var(--menubg);
   overflow: scroll;
   overflow-x: hidden;
+  display: block;
+  visibility: hidden;
 }
 
 .add-btn-container {
@@ -236,7 +249,7 @@ body {
 .todo-item-container {
   width: 100%;
   border: 1px solid rgba(21, 35, 57, 0.1);
-  background-color: rgba(231, 232, 238, 0.283);
+  background-color: rgba(231, 232, 238, 0.653);
   border-radius: 4px;
   height: 55px;
   margin-top: 10px;
@@ -270,13 +283,14 @@ body {
 
 .no-todos-found-container {
   margin-top: 20px;
-  border: 2px dashed rgb(252, 113, 113);
-  background-color: rgb(249, 176, 176);
+  border: 2px dashed rgb(233, 156, 156);
+  background-color: rgb(245, 212, 212);
   padding: 10px;
+  border-radius: 6px;
 }
 
 .no-todos-found-alert {
-  color: rgb(244, 77, 77);
+  color: rgb(247, 132, 132);
   text-align: center;
 }
 
@@ -298,9 +312,17 @@ body {
   background-color: var(--deletebtn);
 }
 
+.delete-list-btn:hover {
+  background-color: #c95454;
+}
+
 .rename-list {
   background-color: var(--renamebtn);
   margin-right: 15px;
+}
+
+.rename-list:hover {
+  background-color: rgb(66, 132, 213);
 }
 
 .main-content {
@@ -310,6 +332,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: var(--bodybg);
+  height: 88vh;
 }
 
 .form-container {
@@ -322,21 +345,20 @@ body {
 input[type='text'],
 input[type='password'],
 input[type='email'] {
-  margin-top: 20px;
-  margin-bottom: 5px;
-  border-radius: 50px;
-  height: 50px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   border: 2px solid rgb(228, 226, 226);
-  background-color: #f2ecec;
+  border-radius: 50px;
+  background-color: #eceef2;
   color: rgb(54, 62, 62);
-  width: 70%;
   font-size: 1.1em;
   font-weight: 600;
   text-align: center;
-  min-width: 50%;
+  min-width: 60%;
   max-width: 60%;
-  height: 55px;
+  height: 3.7rem;
   font-family: var(--font-family);
+  transition: all 0.2s ease-out;
 }
 
 input[type='text']:focus,
@@ -344,6 +366,7 @@ input[type='password']:focus,
 input[type='email']:focus {
   outline: none;
   border: 4px solid rgba(21, 184, 108, 0.6);
+  transition: all 0.16s ease-out;
 }
 
 input[type='text']:hover,
@@ -353,7 +376,7 @@ input[type='email']:hover {
 }
 
 input[type='submit'] {
-  border-radius: 20px;
+  border-radius: 30px;
   background-color: var(--btncolor);
   color: var(--lighttext);
   height: 50px;
@@ -363,6 +386,10 @@ input[type='submit'] {
   max-width: 200px;
   box-shadow: 0 4px 3px rgba(25, 14, 94, 0.2);
   cursor: pointer;
+}
+
+input[type='submit']:hover {
+  background-color: rgb(48, 112, 191);
 }
 
 input[type='checkbox'] {
@@ -401,7 +428,6 @@ input:focus::-webkit-input-placeholder {
 .login-form {
   margin-top: 1em;
   display: flex;
-  margin-top: 1em;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -413,13 +439,13 @@ input:focus::-webkit-input-placeholder {
   height: 90%;
   border: 2.5px solid rgba(243, 245, 243, 0.776);
   border-radius: 12px;
-  margin-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding-top: 30px;
   padding-bottom: 30px;
+  margin-top: 20px;
 }
 
 .todo-form {
@@ -432,45 +458,43 @@ input:focus::-webkit-input-placeholder {
 
 .new-todo-input {
   margin-top: 1em;
-  background-color: rgb(241, 244, 247) !important;
+  background-color: rgb(207, 216, 227) !important;
   border: 5px solid rgb(255, 255, 255) !important;
   box-shadow: 0px 7px 30px rgba(32, 88, 148, 0.132);
   margin-bottom: 10px;
   height: 65px !important;
   color: rgb(49, 92, 165) !important;
   font-weight: 700 !important;
-  transition: ease-out 0.3s;
+  transition: ease-in 0.2s;
 }
 
 .new-todo-input:hover {
-  border: 5px solid rgba(40, 107, 189, 0.413) !important;
+  border: 5px solid rgba(40, 107, 189, 0.749) !important;
   transition: ease-in 0.3s;
+  cursor: pointer;
 }
 
 .new-todo-input:focus {
   background-color: rgb(44, 82, 123) !important;
   border: 5px solid rgb(68, 113, 167) !important;
   color: white !important;
-  transition: ease-out 0.3s;
+  transition: ease-in 0.3s;
 }
 
-.new-todo-input:focus + i {
+.new-todo-input:focus + div > i {
   color: rgb(255, 255, 255) !important;
   transition: transform 0.2s !important;
-}
-
-.fa-rotate-90 {
 }
 
 .section-header {
   font-size: 1.2em;
   font-weight: 600;
-  margin: 10px 10px;
   color: #0c4338;
+  margin-bottom: 10px;
 }
 
 .section {
-  min-width: 350px;
+  min-width: 550px;
   width: 55%;
   margin-top: 4em;
   margin-bottom: 4em;
@@ -493,14 +517,13 @@ input:focus::-webkit-input-placeholder {
 }
 
 .dashboard {
-  background-color: rgb(9, 143, 96);
+  background-color: rgb(16, 81, 160);
 }
 
 .top-right-nav {
   grid-area: toprightnav;
   background-color: var(--headingbg);
   width: 100%;
-  display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
@@ -509,6 +532,8 @@ input:focus::-webkit-input-placeholder {
   position: sticky;
   top: 0;
   z-index: 1000;
+  height: 12vh;
+  display: none;
 }
 
 .addBtn {
@@ -527,13 +552,14 @@ input:focus::-webkit-input-placeholder {
   font-weight: 500;
   font-family: var(--font-family);
   z-index: 100;
-  transition: transform 0.2s;
+  transition: transform 2s;
 }
 
 .addBtn:hover {
-  background-color: #1b9b82;
+  background-color: #22b093;
   color: #ffffff;
   transform: scale(1.5);
+  transition: all 0.4s;
 }
 
 .addBtn i {
@@ -563,6 +589,7 @@ input:focus::-webkit-input-placeholder {
 
 .signupform > *,
 .authentification > * {
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -599,7 +626,7 @@ input:focus::-webkit-input-placeholder {
 
 .horizontal-divider {
   border: 1px solid rgba(237, 232, 232, 0.5);
-  width: 90%;
+  width: 80%;
   margin: 15px;
 }
 
@@ -735,7 +762,7 @@ input:focus::-webkit-input-placeholder {
     background-color: rgba(16, 110, 150, 0);
   }
   100% {
-    background-color: rgb(30, 97, 148);
+    background-color: rgb(46, 128, 191);
   }
 }
 
@@ -758,15 +785,23 @@ animate__flipInX .animate__flipInX {
   position: relative;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.add-todo-form-group i {
+
+.todoaddicon-container {
   position: absolute;
-  left: 74%;
+  align-self: flex-end;
+  right: 24%;
   margin: auto;
-  top: 50%;
-  color: rgba(126, 126, 126, 0.543);
+  background-color: rgba(14, 11, 11, 0.447);
+  border-radius: 100px;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .checkbox-wrapper {
@@ -804,8 +839,8 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
   border-right: 4px solid #ffffff;
   border-bottom: 4px solid #ffffff;
   border-radius: 2px;
-  top: 42%;
-  left: 45%;
+  top: 44%;
+  left: 49%;
   transform: translate(-50%, -50%) rotateZ(40deg);
   opacity: 0;
   transition: all 0.2s;
@@ -846,7 +881,8 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
 }
 
 .filter:hover {
-  border: 2.5px solid rgb(16, 81, 160);
+  border: 2.5px solid rgb(74, 128, 194);
+  transition: all 0.66s;
 }
 
 .filter:focus {
@@ -854,7 +890,7 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
 }
 
 .filter-selected {
-  border: 2.5px solid rgb(169, 190, 199);
+  border: 2.5px solid rgb(109, 163, 228);
   font-weight: 700;
   color: rgb(255, 255, 255);
 }
@@ -870,7 +906,7 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
 
 .round-icon-container {
   position: absolute;
-  bottom: 255px;
+  bottom: 270px;
   background-color: rgb(40, 107, 189);
   width: 100px;
   height: 100px;
@@ -880,6 +916,7 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
   align-items: center;
   margin-bottom: 1em;
   box-shadow: 0 -1px 20px rgba(14, 11, 11, 0.2);
+  border: 5px solid white;
 }
 
 .list-icon {
@@ -891,8 +928,8 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
 }
 
 .submit-btn:hover {
-  background-color: rgb(232, 240, 235);
-  color: rgb(14, 70, 40);
+  background-color: rgb(9, 143, 96);
+  color: rgb(255, 255, 255);
 }
 
 .deletelist-confirmation-container {
