--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-
 *,
 *::after,
 *::before {
@@ -43,19 +36,21 @@ body {
 }
 
 .description {
-  font-size: 5em;
+  font-size: 5rem;
 }
 
-.signupbtn {
+.signupbtn,
+.loginbtn {
   text-decoration: underline;
-  margin-top: 0.5em;
-  font-size: 1em;
+  margin-top: 0.5rem;
+  font-size: 1rem;
   font-weight: 600;
   color: rgb(8, 40, 74);
   cursor: pointer;
 }
 
-.signupbtn:hover {
+.signupbtn:hover,
+.loginbtn:hover {
   color: rgb(16, 110, 150);
 }
 
@@ -129,7 +124,7 @@ body {
 
 .list-item {
   list-style-type: none;
-  font-size: 0.97em;
+  font-size: 0.97rem;
   font-family: var(--font-family);
   font-weight: 600;
   color: var(--darktext);
@@ -216,7 +211,7 @@ body {
 
 .title {
   color: var(--lighttext);
-  font-size: 1.9em;
+  font-size: 1.9rem;
   font-family: var(--font-family);
   font-weight: 700;
   text-decoration: none;
@@ -224,7 +219,7 @@ body {
 
 .description {
   color: var(--lighttext);
-  font-size: 0.925em;
+  font-size: 0.925rem;
   margin-top: 3px;
   font-weight: 100;
 }
@@ -373,7 +368,7 @@ body {
   border-radius: 6px;
   border: 1px solid rgba(255, 255, 255, 0.55);
   font-family: var(--font-family);
-  font-size: 0.8em;
+  font-size: 0.8rem;
   font-weight: 400;
   color: #f0ebeb;
 }
@@ -436,8 +431,8 @@ input[type='email'] {
   border: 2px solid rgb(228, 226, 226);
   border-radius: 50px;
   background-color: #eceef2;
-  color: rgb(54, 62, 62);
-  font-size: 1.1em;
+  color: rgb(16, 81, 160);
+  font-size: 1.1rem;
   font-weight: 600;
   text-align: center;
   min-width: 60%;
@@ -548,7 +543,7 @@ input:focus::-webkit-input-placeholder {
 }
 
 .login-form {
-  margin-top: 1em;
+  margin-top: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -606,7 +601,7 @@ input:focus::-webkit-input-placeholder {
 }
 
 .new-todo-input {
-  margin-top: 1em;
+  margin-top: 1rem;
   background-color: rgb(207, 216, 227) !important;
   border: 5px solid rgb(255, 255, 255) !important;
   -webkit-box-shadow: 0px 7px 30px rgba(32, 88, 148, 0.132);
@@ -647,7 +642,7 @@ input:focus::-webkit-input-placeholder {
 }
 
 .section-header {
-  font-size: 1.2em;
+  font-size: 1.2rem;
   font-weight: 600;
   color: #0c4338;
   margin-bottom: 10px;
@@ -656,8 +651,8 @@ input:focus::-webkit-input-placeholder {
 .section {
   min-width: 550px;
   width: 55%;
-  margin-top: 4em;
-  margin-bottom: 4em;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
   background-color: var(--sectionbg);
   -webkit-box-shadow: 0 -1px 20px rgba(126, 126, 126, 0.2);
   box-shadow: 0 -1px 20px rgba(126, 126, 126, 0.2);
@@ -724,7 +719,7 @@ input:focus::-webkit-input-placeholder {
   position: fixed;
   top: 128px;
   left: 60px;
-  font-size: 0.86em;
+  font-size: 0.86rem;
   font-weight: 500;
   font-family: var(--font-family);
   z-index: 100;
@@ -781,7 +776,6 @@ input:focus::-webkit-input-placeholder {
 
 .signupform > *,
 .authentification > * {
-  margin-top: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -799,7 +793,7 @@ input:focus::-webkit-input-placeholder {
 }
 
 .form-label {
-  margin-top: 0.5em;
+  margin-top: 0.5rem;
   font-weight: 500;
   color: #333946;
 }
@@ -808,9 +802,14 @@ input:focus::-webkit-input-placeholder {
   display: none;
 }
 
-.error.error-identified {
+.list-name-error {
+  visibility: hidden;
+}
+
+.error.error-identified,
+.duplicatelist-error-message {
   color: rgb(254, 144, 144);
-  display: block;
+  display: flex;
   margin: 5px 0px 5px 0px;
 }
 
@@ -1157,7 +1156,7 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
 
 .round-icon-container {
   position: absolute;
-  bottom: 270px;
+  bottom: 295px;
   background-color: rgb(40, 107, 189);
   width: 100px;
   height: 100px;
@@ -1171,14 +1170,14 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
   -webkit-box-shadow: 0 -1px 20px rgba(14, 11, 11, 0.2);
   box-shadow: 0 -1px 20px rgba(14, 11, 11, 0.2);
   border: 5px solid white;
 }
 
 .list-icon {
-  font-size: 4em;
+  font-size: 4rem;
 }
 
 .filter-icon {
@@ -1256,7 +1255,7 @@ input[type='checkbox']:checked ~ .custom-checkbox::after {
 .delete-confirmation-text {
   color: rgb(255, 255, 255);
   margin-bottom: 20px;
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
 .delete-confirmation-warning {
